# garvis

./: .gitignore  README.md  docker-compose.yml
garvis-backend/: .env.example  .gitignore  Dockerfile  README.md  generate_dataset.py  main.py  pyproject.toml  test.db
garvis-backend/app/: app.py  main.py  users.py
garvis-backend/app/api/: calendar.py  medasr.py  patient.py  speech_to_text.py  ws_garvis_router.py  xray.py
garvis-backend/app/constants/: agentic_assistant.py  agentic_assistant_constants.py
garvis-backend/app/core/: GarvisWsSession.py  garvis.py  garvis_task.py  garvis_ws_session.py
garvis-backend/app/core/dto/: agent_state.py  garvis_dtos.py  garvis_reply.py  garvis_task.py  ws_message.py  ws_messages.py  ws_start_content
garvis-backend/app/core/models/: database_models.py
garvis-backend/app/database/: data_service.py  duckdb_data_service.py  duckdb_database.py  sqlite_data_service.py
garvis-backend/app/media/: images.py
garvis-backend/app/schemas/: client_command.py  garvis_query.py  post_schemas.py
garvis-backend/app/services/: agentic_assistant_service.py  medasr_service.py  text_to_speech_service.py
garvis-backend/app/utils/: agent_utils.py  date_utils.py  image_utils.py  llm_utils.py  log_utils.py  string_utils.py  websocket_utils.py
garvis-backend/data/tables/: doctors.csv  patient_history.csv  patients.csv  xrays.csv
garvis-client/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
garvis-client/src/: App.tsx  config.ts  index.css  main.tsx
langgraph-lab/: .env  requirements.txt
langgraph-lab/01. control-flow/: 03b Multiple_Nodes_Exercise.ipynb  04b Conditional_graph_Exercise.ipynb  05a Loop.ipynb  05b Loop_Exercise.ipynb
langgraph-lab/02. agents/: .env  .env.example  (+10 more)
(+76 files in other folders)
